[build-system]
requires = [
	"setuptools>=77.0.3",
	"setuptools-scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "lomap2"
description = "Lead Optimization Mapper 2"
readme = "README.md"
authors = [{name = "Gaetano Calabro and David Mobley"}]
maintainers = [{name = "The Open Free Energy developers", email = "openfreeenergy@omsf.io"}]
license = "MIT"
license-files = ["LICENSE.txt"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
urls = {Homepage = "https://github.com/OpenFreeEnergy/Lomap"}
keywords = ['alchemical free energy', 'setup', 'perturbation', 'network']
requires-python = ">= 3.9"
dependencies = [
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "codecov",
]
graphviz = ["pygraphviz"]

[project.scripts]
lomap = "lomap.dbmol:startup"


[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools_scm]
fallback_version = "0.0.0"
