[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=77.0.3",
  "setuptools-scm>=8",
]

[project]
name = "lomap2"
description = "Lead Optimization Mapper 2"
readme = "README.md"
keywords = [ "alchemical free energy", "network", "perturbation", "setup" ]
license = "MIT"
license-files = [ "LICENSE.txt" ]
maintainers = [ { name = "The Open Free Energy developers", email = "openfreeenergy@omsf.io" } ]
authors = [ { name = "Gaetano Calabro and David Mobley" } ]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Physics",
]
dynamic = [ "version" ]
dependencies = [
  "matplotlib",
  "networkx",
  "numpy",
  "rdkit",
]
optional-dependencies.credits = [ "duecredit" ]
optional-dependencies.graphviz = [ "pygraphviz" ]
optional-dependencies.test = [
  "codecov",
  "pytest",
]
urls = { Homepage = "https://github.com/OpenFreeEnergy/Lomap" }
scripts.lomap = "lomap.dbmol:startup"

[tool.setuptools]
packages.find.where = [ "src" ]
include-package-data = true
zip-safe = false

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
lint.select = [
  "E",  # pycodestyle errors
  "F",  # Pyflakes
  "I",  # isort
  # "C901"  # mccabe complexity  TODO: add this back in
  "UP",
  "W",  # pycodestyle warnings
]
lint.ignore = [
  "E402", # module-level import not at top (conflicts w/ isort)
  "E501", # line-length violations (black enforces these)
  "F401", # unused imports (TODO: fix later)
]

[tool.mypy]
files = "src"
ignore_missing_imports = true
warn_unused_ignores = true
overrides = [ { module = "lomap._due", ignore_errors = true } ]
