[metadata]
name = lomap2
description = Lead Optimization Mapper 2
long_description = file: README.md
long_description_type = text/markdown
author = Gaetano Calabro and David Mobley
author_email = 
maintainer = Open Free Energy
maintainer_email = openfreeenergy@omsf.io
license = MIT
license_file = LICENCE.txt
url = https://github.com/OpenFreeEnergy/Lomap
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
keywords =
    alchemical free energy setup
    perturbation network

[options]
zip_safe = False
python_requires = >= 3.8
install_requires =
    matplotlib
    networkx

include_package_data = True
packages = find:

[options.extras_require]
graphviz =
    pygraphviz
test =
    pytest

[options.entry_points]
console_scripts =
    lomap = lomap.dbmol:startup

[versioneer]
# Automatic version numbering scheme
VCS = git
style = pep440
versionfile_source = lomap/_version.py
versionfile_build = lomap/_version.py
tag_prefix = ''
